--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Widgets</string>
+    <string name="title_activity_demo">Demo</string>
+
+    <string name="rangeSeekBarTitle">RangeSeekBar</string>
+    <string name="action_settings">Settings</string>
 </resources>
